Update API docs and fix time example text-alignment

--- a/docs/examples/time/style.css
+++ b/docs/examples/time/style.css
@@ -18,6 +18,7 @@ body {
 .item {
     display: grid;
     place-items: center;
+    text-align: center;
     width: 30vmin;
     height: 30vmin;
     font-size: 5vmin;
